feat: user flow in selection
