# src/dtos/selections.dto.ts
@@ -1,4 +1,4 @@
-import { ArrayMinSize, IsArray, IsInt, IsString } from "class-validator";
+import { ArrayMinSize, IsArray, IsInt, IsJSON, IsObject, IsString } from "class-validator";
 
 export class CreateSelectionDto {
   @IsInt({ each: true })
@@ -15,3 +15,17 @@ export class CreateSelectionDto {
   @IsString()
   description: string;
 }
+
+export class UserFlowDto {
+  @IsObject({ each: true })
+  nodes: object[];
+
+  @IsObject({ each: true })
+  edges: object[];
+}
+
+// class UserFlowNode {
+//   id: number | string;
+
+//   position: { x: number; y: number };
+// }
